--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p class="tw">Mi occupo di scrivere testi ottimizzati per poter renderti visibile ai motori di ricerca, migliorare la scansione,
          l'indicizzazione ed il posizionamento di un'informazione o contenuto presente nel tuo sito web. </p>
       <h4 class="tw normal-text"><img src="images/content.png" style="width:32px; margin-right: 5px;" alt=""><b>Content Marketing</b></h4>
-      <p class="tw">I miei contenuti di qualità vengono scritti attraverso regole efficienti del Copywriting avanzato al fine di attirare un pubbico di riferimento sul proprio sito web o Social Network in modo da informare il lettore, creare un legame, instaurare fiducia nel
+      <p class="tw">I miei contenuti di qualità vengono scritti attraverso regole efficienti del Copywriting avanzato al fine di attirare un pubblico di riferimento sul proprio sito web o Social Network in modo da informare il lettore, creare un legame, instaurare fiducia nel
         tempo, e quindi aumentare le vendite. </p>
 </div>
 </div>
