--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 <div class="poster__content reveal">
 <h3 class="big-text">Mi presento</h3>
-<p> Sono Emanuele Sprega e nasco a Roma nel marzo del 1996. Non ricordo nulla degli anni 90’, Non ricordo nulla degli anni 90’, mentre non scorderò i miei quadernini che da bambino riempivo di storie fantastiche. Da allora la passione per la scrittura non mi ha mai abbandonato, anzi,
+<p> Sono Emanuele Sprega e nasco a Roma nel marzo del 1996. Non ricordo nulla degli anni 90’, mentre non scorderò i miei quadernini che da bambino riempivo di storie fantastiche. Da allora la passione per la scrittura non mi ha mai abbandonato, anzi,
   scoperte le potenzialità del mondo digitale nel novembre del 2020, decisi di formarmi come <b>Copywriter</b>, studiando in particolare <b>l’ottimizzazione per i motori di ricerca (SEO)</b>.
   Insomma, sono un ragazzo che si occupa di comunicazione digitale  che trae energia dalla soddisfazione dei suoi clienti e dal picchiettio dei tasti sulla tastiera.</p>
 </div>
